# stt-vault

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
src/stt_vault/: ai_content.py  app.py  app_services.py  auth.py  db.py  db_assets.py  db_connection.py  db_folders.py  db_jobs.py  db_schema.py  db_speakers.py  db_transcripts.py  db_uploads.py  db_visual_events.py  diarization.py  exports.py  media.py  requests.py  settings.py  static_frontend.py  summary_service.py  transcription.py  visual.py  worker.py
src/stt_vault/routes/: __init__.py  asset_media.py  asset_speakers.py  asset_visual_events.py  assets.py  folders.py  speakers.py  system.py  uploads.py
tests/: test_ai_content.py  test_app_routes.py  test_asset_metadata.py  test_auth.py  test_db_compat.py  test_folder_routes.py  test_transcription.py  test_worker.py
web/: package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.html
web/src/lib/: SpeakerProgressBar.svelte  SpeakerTimelineRow.svelte  SummaryMarkdown.svelte  api.ts  format.ts  speakerTimeline.ts  stores.ts  theme.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/assets/[id]/: +page.svelte  asset-page.helpers.ts  asset-page.types.ts
web/src/routes/assets/[id]/components/: AssetDetailsFoldout.svelte  AssetDownloadsFoldout.svelte  AssetEventsFoldout.svelte  AssetFoldoutGroup.svelte  AssetHeader.svelte  AssetMediaPane.svelte  AssetSpeakersFoldout.svelte  FoldoutPanel.svelte  ResizableAssetWorkspace.svelte  SpeakerEditorPopover.svelte  TranscriptPane.svelte  VisualEventsStrip.svelte
web/src/routes/jobs/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/speakers/: +page.svelte
