[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stt-vault"
version = "0.1.0"
description = "Speaker-aware STT service using Senko and OpenAI transcription."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.12.0",
    "openai>=2.14.0",
    "numpy>=2.0.0",
    "senko @ git+https://github.com/narcotic-sh/senko.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[project.scripts]
stt-vault = "stt_vault.app:run"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
