[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stt-vault"
version = "0.1.0"
description = "Speaker-aware STT service using Senko and OpenAI transcription."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.12.0",
    "openai>=2.14.0",
    "numpy>=2.0.0",
    "senko @ git+https://github.com/narcotic-sh/senko.git",
    "pyjwt>=2.10,<3",
]

[project.optional-dependencies]
cpu = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
]
gpu = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pypi", extra = "gpu" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pypi", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[project.scripts]
stt-vault = "stt_vault.app:run"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]
